--- a/AIDA.csproj
+++ b/AIDA.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.74" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="TimHanewich.AgentFramework" Version="0.1.0" />
     <PackageReference Include="TimHanewich.Bing" Version="0.2.0" />
     <PackageReference Include="TimHanewich.MicrosoftGraphHelper" Version="1.1.0" />
   </ItemGroup>
