--- a/src/AIDA.csproj
+++ b/src/AIDA.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.74" />
+    <PackageReference Include="PdfPig" Version="0.1.9" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="TimHanewich.AgentFramework" Version="0.1.1" />
     <PackageReference Include="TimHanewich.Bing" Version="0.2.0" />
