--- a/src/AIDA.csproj
+++ b/src/AIDA.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.74" />
     <PackageReference Include="PdfPig" Version="0.1.9" />
+    <PackageReference Include="SecuritiesExchangeCommission.Edgar" Version="7.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="TimHanewich.AgentFramework" Version="0.3.0" />
   </ItemGroup>
